criando processo PesquisaAluno e ControleDeAcesso

--- a/WebContent/layout.xhtml
+++ b/WebContent/layout.xhtml
@@ -18,11 +18,11 @@
 		<img alt="imagem_loucademia" src="images/Loucademia_Logotipo.png"/>
 		<nav>		
 			<div>
-				<a jsf:outcome="dadosAluno">Novo Aluno</a><br></br>  
-				<a jsf:outcome="pesquisaDeAluno">Pesquisa de Aluno</a><br></br>  
-				<a jsf:outcome="controleDeAcesso">Controle de Acesso</a><br></br>  
-				<a jsf:outcome="relatoriosDeEntradaSaida">Relatorio de Entradas e Saídas</a><br></br>  
-				<a jsf:outcome="relatoriosDeSituacoes">Relatorio de Situações</a><br></br>  
+				<a jsf:outcome="dadosAluno.html">Novo Aluno</a><br></br>  
+				<a jsf:outcome="pesquisaDeAluno.html">Pesquisa de Aluno</a><br></br>  
+				<a jsf:outcome="controleDeAcesso.html">Controle de Acesso</a><br></br>  
+				<a jsf:outcome="relatoriosDeEntradaSaida.html">Relatorio de Entradas e Saídas</a><br></br>  
+				<a jsf:outcome="relatoriosDeSituacoes.html">Relatorio de Situações</a><br></br>  
 			</div>
 		</nav>
 	</header>
