--- a/WebContent/relatoriosDeEntradaSaida.html
+++ b/WebContent/relatoriosDeEntradaSaida.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Loucademia</title>
 <link rel="stylesheet" type="text/css" href="css/Loucademia_estilo.css">
 </head>
@@ -11,11 +11,11 @@
 		<img alt="imagem_loucademia" src="images/Loucademia_Logotipo.png">
 		<nav>
 			<div>
-				<a href="novoAluno.html">Novo Aluno</a><br>
-				<a href="pesquisaDeAluno.html">Pesquisa de	Aluno</a><br> 
+				<a href="dadosAluno.html">Novo Aluno</a><br>
+				<a href="pesquisaDeAluno.html">Pesquisa de Aluno</a><br> 
 				<a href="controleDeAcesso.html">Controle de Acesso</a><br> 
-				<a href="relatoriosDeEntradaSaida.html">Relatorio de Entradas e Saídas</a><br> 
-				<a href="relatoriosDeSituacoes.html">Relatorio de Situações</a><br>
+				<a href="relatoriosDeEntradaSaida.html">Relatorio de Entradas e SaÃ­das</a><br> 
+				<a href="relatoriosDeSituacoes.html">Relatorio de SituaÃ§Ãµes</a><br>
 			</div>
 		</nav>
 	</header>
