--- a/WebContent/relatoriosDeSituacoes.html
+++ b/WebContent/relatoriosDeSituacoes.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Loucademia</title>
 <link rel="stylesheet" type="text/css" href="css/Loucademia_estilo.css">
 </head>
@@ -11,17 +11,17 @@
 		<img alt="imagem_loucademia" src="images/Loucademia_Logotipo.png">
 		<nav>
 			<div>
-				<a href="novoAluno.html">Novo Aluno</a><br>
+				<a href="dadosAluno.html">Novo Aluno</a><br>
 				<a href="pesquisaDeAluno.html">Pesquisa de	Aluno</a><br> 
 				<a href="controleDeAcesso.html">Controle de Acesso</a><br> 
-				<a href="relatoriosDeEntradaSaida.html">Relatorio de Entradas e Saídas</a><br> 
-				<a href="relatoriosDeSituacoes.html">Relatorio de Situações</a><br>
+				<a href="relatoriosDeEntradaSaida.html">Relatorio de Entradas e SaÃ­das</a><br> 
+				<a href="relatoriosDeSituacoes.html">Relatorio de SituaÃ§Ãµes</a><br>
 			</div>
 		</nav>
 	</header>
 	<!-- Cabecalho - fim -->
     
-     <h1>Relatorio de Situações</h1>
+     <h1>Relatorio de SituaÃ§Ãµes</h1>
 
     <div id="infoMessage">
        (Aqui vai eventual mensagem de sistema confirmando sucesso ou erro)
@@ -31,8 +31,8 @@
     
     <form>
        <fieldset>
-              <legend>Parametro de Situação</legend>
-              <label for="situacao">Situação</label><br>
+              <legend>Parametro de SituaÃ§Ã£o</legend>
+              <label for="situacao">SituaÃ§Ã£o</label><br>
               <select name="situacao" id="situacao">
                  <option>Ativo</option>
                  <option>Inativo</option>
@@ -54,7 +54,7 @@
          <th>Situacao</th>
          <th>Celular</th>
          <th>Fixo</th>
-         <th>Ações</th>
+         <th>AÃ§Ãµes</th>
       </tr>
       <tr>
          <td>1</td>
