--- a/WebContent/topo.html
+++ b/WebContent/topo.html
@@ -16,11 +16,11 @@
 		<img alt="imagem_loucademia" src="images/Loucademia_Logotipo.png">
 		<nav>
 			<div>
-				<a href="novoAluno.html">Novo Aluno</a><br>
-				<a href="pesquisaDeAluno.html">Pesquisa de	Aluno</a><br> 
-				<a href="controleDeAcesso.html">Controle de Acesso</a><br> 
-				<a href="relatoriosDeEntradaSaida.html">Relatorio de Entradas e Saídas</a><br> 
-				<a href="relatoriosDeSituacoes.html">Relatorio de Situações</a><br>
+				<a href="dadosAluno">Novo Aluno</a><br>
+				<a href="pesquisaDeAluno">Pesquisa de Aluno</a><br> 
+				<a href="controleDeAcesso">Controle de Acesso</a><br> 
+				<a href="relatoriosDeEntradaSaida">Relatorio de Entradas e Saídas</a><br> 
+				<a href="relatoriosDeSituacoes">Relatorio de Situações</a><br>
 			</div>
 		</nav>
 	</header>
